<?xml version="1.0"?>
<package>
  <name>asr_lib_pose_prediction_ism</name>
  <version>1.0.0</version>
  <description>This package contains classes and algorithms to predict poses of searched objects by the help of a tree of ISMs. It is organized as a library and contains only a small program to evaluate the performance of different algorithms.</description>
  <author>Heizmann Heinrich, Heller Florian, Meißner Pascal, Stöckle Patrick</author>
  <maintainer email="asr-ros@lists.kit.edu">Meißner Pascal</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>asr_lib_ism</build_depend>
  <build_depend>asr_msgs</build_depend>
    
  <run_depend>cmake_modules</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>asr_lib_ism</run_depend>
  <run_depend>asr_msgs</run_depend>
  <run_depend>roslib</run_depend>
</package>
